FIxing navbar to not overlap carousel
Padding above carousel changes form 2% to 8% to 11 % as the screen gets smaller

--- a/indexstyle.css
+++ b/indexstyle.css
@@ -116,7 +116,15 @@ img.header_image{
   height: auto;
   margin-bottom: 0px;
   margin-top: 0px;
-  padding-top: 5%;
+  padding-top: 8%;
+}
+
+@media (max-width: 500px){
+.carousel {
+  height: auto;
+  margin-bottom: 0px;
+  margin-top: 0px;
+  padding-top: 11%;
 }
 
 }
